# nf-interpreter

./: .gitmodules  CMakeLists.txt  CMakePresets.json  azure-pipelines-nightly.yml
.devcontainer/: devcontainer.json
.devcontainer/ChibiOS/: Dockerfile.ChibiOS.SRC  devcontainer.json
.devcontainer/sources/: Dockerfile.All  Dockerfile.AzureRTOS  Dockerfile.AzureRTOS.RPI  Dockerfile.ChibiOS  Dockerfile.ESP32  Dockerfile.FreeRTOS.NXP  Dockerfile.TI
.github/workflows/: build-azurertos-rpi-targets.yml  build-azurertos-targets.yml  build-azurertos-targets.yml.bak  build-chibios-target.yml  build-chibios-targets.yml  build-esp32-targets.yml  build-freertos-nxp-targets.yml  build-freertos-targets.yml  build-freertos-targets.yml.bak  build-ti-targets.yml  build-win32-target.yml.bak  check-clang-formatting.yml  devcontainer-all.yaml  devcontainer-azurertos.yaml  devcontainer-ti.yaml  (+5 more)
CMake/: binutils.ChibiOS.cmake  binutils.TI_SimpleLink.cmake
azure-pipelines-templates/: download-install-arm-gcc-toolchain.yml
install-scripts/: install-arm-gcc-toolchain.ps1
targets/AzureRTOS/RaspberryPi/RP2040/: CMakeLists.txt  CMakePresets.json  README.md  target_tx_user.h
targets/AzureRTOS/RaspberryPi/RP2040/CMake/: RP2040.Azure.Threadx.cmake  RP2040.nfInterpreter.cmake  RP2040.pico-sdk.cmake
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/: Core1Tasks.c  main.c
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/HAL/: TargetHAL_Spi.h  hard_fault_handler.c  nanoCRT.cpp  targetHAL.cpp  targetHAL.h  targetHAL_ConfigurationManager.cpp  targetHAL_Power.c  targetHAL_Power.h  targetHAL_Time.cpp  targetHAL_Time.h  targetHAL_board.c  targetHAL_board.h  target_board.h  target_common.c  target_common.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/Memory/: Device_BlockStorage.c  FlashDriver.c  FlashDriver.h  Memory.cpp  RaspberryPiPico.ld  TargetPAL_BlockStorage.h  Target_Windows_Storage.h  platform_BlockStorage.c  target_BlockStorage.c  target_BlockStorage.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/PAL/: platform_heap.c  platform_target_capabilities.h  targetPAL.c  targetPAL.h  targetPAL_Events.cpp  targetPAL_Time.cpp  targetPAL_Time.h  target_os.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/Startup/: CLR_RT_InteropAssembliesTable.cpp  CLR_Startup_Thread.c  bs2_default_padded_checksummed.s  nanoFramework_Threads.c  tx_initialize_low_level.S  tx_user.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.Device.Adc/: nanoFramework.System.Device.Adc.cpp
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.Device.Gpio/: nanoFramework.System.Device.Gpio.cpp  sys_dev_gpio_native_target.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.Device.I2c/: nanoFramework.System.Device.I2c.cpp
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.Device.Pwm/: nanoFramework.System.Device.Pwm.cpp
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.Device.Spi/: nanoFramework.System.Device.Spi.cpp  sys_dev_spi_native_target.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/System.IO.Ports/: CircularBuffer.c  CircularBuffer.h  cpu_System.IO.Ports.cpp
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/WireProtocol/: WireProtocol_ReceiverThread.c  WireProtocol_ReceiverThread.h  Wire_Protocol_HAL_Interface.c  tusb_config.h  usb_descriptors.c  wp_Communications.c  wp_Communications.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/include/pico/: config_autogen.h  version.h
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/nanoFramework.Graphics/: Graphics_Memory.cpp  Initialize_Graphics.cpp  Spi_To_Display_Pico.cpp  TouchDevice_NULL.cpp  pico-LCD-1.14V2-ST7789VW.cpp
targets/AzureRTOS/RaspberryPi/RP2040/nanoCLR/nanoFramework.Hardware.RpiPico/: NativeRpiPico.cpp  NativeRpiPico.h  NativeRpiPico_nanoFramework_Hardware_RpiPico_Configuration.cpp
(+57 files in other folders)
